Add sliding menu

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@ title: Home
 ---
 
 {% for post in site.posts %}
-
+<div class="posts">
   <h1>
     <a href="{{ post.url }}">{{ post.title }}</a>
   </h1>
-
   <img src="{{ site.url }}/images/{{ post.image.teaser }}">
-
   <p>{{ post.content | strip_html | truncate: 350 }} <a href="{{ post.url }}">Read more</a>
-
+</div>
 {% endfor %}
