Revert "Move menu files to folder and replace site.github.url with site.url"
This reverts commit 2d95f97daeffa65024a13129823d1dd76384dc54.

--- a/404.html
+++ b/404.html
@@ -11,5 +11,5 @@ permalink: 404.html
 
   <h1>Ahhhhh!</h1>
 
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again, or search for it on the <a href="{{ site.baseurl }}/writing.html">archives page</a>.</p>
+  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again, or search for if on the <a href="{{ site.baseurl }}/writing.html">archives page</a>.</p>
 </div>
