--- a/404.html
+++ b/404.html
@@ -1,15 +1,12 @@
 ---
 layout: default
-title: "404: Page not found"
-permalink: 404.html
 ---
-
+<header>
+  <h1 class="header-small">
+    <a href="{{ site.baseurl }}">{{ site.name }}</a>
+  </h1>
+</header>
 <div class="page">
-  <h1 class="page-title">404: Page not found</h1>
-
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/SIaFtAKnqBU?autoplay=1&start=3" frameborder="0" allowfullscreen></iframe>
-
-  <h1>Ahhhhh!</h1>
-
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again, or search for it on the <a href="{{ site.baseurl }}/menu/writing.html">archives page</a>.</p>
+  <h1 class="page-title">{{ page.title }}</h1>
+  <span>Sorry, but the page you were trying to view does not exist.</span>
 </div>
